# mcp-pyrefly

./: .gitignore  CHANGELOG.md  PSYCHOLOGICAL_RESEARCH.md  README.md  RELEASING.md  example.py  fixed_example.py  pyproject.toml  test_server.py
.github/: release.yml
.github/workflows/: ci.yml  publish.yml
scripts/: bump_version.py
src/mcp_pyrefly/: __init__.py  code_quality_analyzer.py  enforcement_server.py  gamification.py  psychological_personas.py  py.typed  pyrefly_integration.py  server.py  session_tracker.py
tests/: test_basic.py  test_persona_ab_testing.py  test_persona_code_quality.py  test_psychological_triggers.py
